--- a/ny3.html
+++ b/ny3.html
@@ -140,7 +140,7 @@
     function playSound(color, frequency, filterValue) {
       let synth;
       if (color === 'red') {
-        if (currentRedSynth) currentRedSynth.dispose(); // Ødelegg gammel synth
+        if (currentRedSynth) currentRedSynth.dispose();
         synth = new Tone.Synth().toDestination();
         currentRedSynth = synth;
       } else if (color === 'green') {
@@ -165,6 +165,14 @@
           frequency: filterValue
         }
       });
+
+      // Ødelegg synth etter en kort tid for å unngå opphopning
+      setTimeout(() => {
+        synth.triggerRelease();
+        if (color === 'red') currentRedSynth = null;
+        else if (color === 'green') currentGreenSynth = null;
+        else if (color === 'blue') currentBlueSynth = null;
+      }, 100);
     }
 
     function updateGrids() {
@@ -172,7 +180,8 @@
       const frame = ctx.getImageData(0, 0, canvas.width, canvas.height);
       const pixels = frame.data;
 
-      for (let i = 0; i < pixels.length; i += 4) {
+      // Reduserer oppløsning ved å bruke kun hver 4. pixel
+      for (let i = 0; i < pixels.length; i += 16) {
         const r = pixels[i];
         const g = pixels[i + 1];
         const b = pixels[i + 2];
