--- a/ny2.html
+++ b/ny2.html
@@ -6,7 +6,7 @@
     <title>Knapper for å bytte tonalitet</title>
     <style>
         body {
-            background-color: rgba(221, 245, 2, 0.883);
+            background-color: rgba(2, 38, 245, 0.883);
         }
         #video-container {
             position: relative;
@@ -17,8 +17,7 @@
         }
         #controls {
             position: static;
-            width: 400px;
-            height: 400px;
+            width: 400pßpx;
         }
         #pixel-grid {
             position: absolute;
@@ -136,8 +135,8 @@ height: 480px;
     <script>
 
         const pixelSize = 16;
-        const threshold = 200;
-        const threshold2 = 255;
+        const threshold = 90;
+        const threshold2 = 100;
 
         let pixelGrid = [];
         
