--- a/ny2.html
+++ b/ny2.html
@@ -696,6 +696,7 @@ height: 480px;
             });
 
             grid = newGrid;
+            console.log(activeCellCount);
 
             if  ((activeCellCount > 40) && (activeCellCount < 80)) {
                 currentScale = pentatonicScale3;
