--- a/ny2.html
+++ b/ny2.html
@@ -698,12 +698,15 @@ height: 480px;
             grid = newGrid;
             console.log(activeCellCount);
 
-            if  ((activeCellCount > 40) && (activeCellCount < 80)) {
+            if  ((activeCellCount > 80) && (activeCellCount < 100)) {
+                currentScale = pentatonicScale4;
+                currentNote = droneNote4;
+            } if ((activeCellCount > 60) && (activeCellCount < 80))  {
                 currentScale = pentatonicScale3;
                 currentNote = droneNote3;
-            } if (activeCellCount > 40) {
-                currentScale = pentatonicScale2;
-                currentNote = droneNote2;
+            } if ((activeCellCount > 30) && (activeCellCount < 60))  {
+                currentScale = pentatonicScale3;
+                currentNote = droneNote3;
             } else {
                 currentScale = pentatonicScale;
                 currentNote = droneNote;
