--- a/ny2.html
+++ b/ny2.html
@@ -698,20 +698,23 @@ height: 480px;
             grid = newGrid;
             console.log(activeCellCount);
             
-
             if  ((activeCellCount > 100) && (activeCellCount < 110)) {
                 currentScale = pentatonicScale5;
                 currentNote = droneNote5;
-            } if  ((activeCellCount > 80) && (activeCellCount < 100)) {
+            } 
+            if  ((activeCellCount > 80) && (activeCellCount < 100)) {
                 currentScale = pentatonicScale4;
                 currentNote = droneNote4;
-            } if ((activeCellCount > 60) && (activeCellCount < 80))  {
+            }
+            if ((activeCellCount > 60) && (activeCellCount < 80))  {
                 currentScale = pentatonicScale3;
                 currentNote = droneNote3;
-            } if ((activeCellCount > 30) && (activeCellCount < 60))  {
+            }
+            if ((activeCellCount > 30) && (activeCellCount < 60))  {
                 currentScale = pentatonicScale3;
                 currentNote = droneNote3;
-            } else {
+            } 
+             else {
                 currentScale = pentatonicScale;
                 currentNote = droneNote;
             }
